--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: default
 ---
 
 <style>
+
 </style>
   
-<h1>Hello</h1>
-<p>There</p>
+<h1>Web Conference</h1>
+
+<h2>Speakers</h2>
+<img src="{{site.url}}/images/11b418bf0a8d76da9fa5d3ca72c4eba3.png" width="200">
