--- a/index.html
+++ b/index.html
@@ -9,4 +9,13 @@ layout: default
 <h1>Web Conference</h1>
 
 <h2>Speakers</h2>
+
+<img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" width="200">
+<img src="{{site.url}}/images/11882d67779a93c29216c1c6b465ed2e.png" width="200">
+<img src="{{site.url}}/images/118d8b62f468836d572ebafb98f1a65e.png" width="200">
+<img src="{{site.url}}/images/11967f63dd951f7ea682ab1239131c7d.png" width="200">
 <img src="{{site.url}}/images/11b418bf0a8d76da9fa5d3ca72c4eba3.png" width="200">
+<img src="{{site.url}}/images/1ece1693437e7b9a77823a98e95b81cc.png" width="200">
+<img src="{{site.url}}/images/6ad7f3a34309beba7318a4b9a53e6fe9.png" width="200">
+<img src="{{site.url}}/images/83fa18cdcd216e7220794a23e76fe0dc.png" width="200">
+<img src="{{site.url}}/images/a95192c2c84e5b344eab1038815c4fc5.png" width="200">
