--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@ layout: default
 ---
 
 <style>
+div.location {
+  display: block;
+}
+
+div.location img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 div.speaker {
   display: block;
 }
@@ -15,6 +25,12 @@ div.speaker img {
 </style>
   
 <h1>Web Conference</h1>
+
+<h2>Location</h2>
+
+<div class="location">
+  <img src="{{site.url}}/images/rutan.png" class="speaker-image">
+</div>
 
 <h2>Speakers</h2>
 
