--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@ layout: default
 ---
 
 <style>
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
 div.location {
   display: block;
 }
