--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@ div.speaker img {
 
 <div class="location">
   <img src="{{site.url}}/images/rutan.png" class="speaker-image">
+  <a href="https://www.google.com/maps/place/Ruta+N/@6.2648627,-75.566595,15z/data=!4m6!3m5!1s0x8e4428e695083c29:0x99f177323f8c67d5!8m2!3d6.2648627!4d-75.566595!16s%2Fg%2F1tctsqq6?entry=ttu>
+    Complejo Ruta N Calle 67 Nº 52-20 Medellín - Colombia
+  </a>
 </div>
 
 <h2>Speakers</h2>
