--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@ layout: default
 
 h1 {
   text-align: center;
+  margin: 10px;
 }
 
 h2 {
   text-align: center;
+  margin: 10px;
 }
 
 div.location {
   display: block;
+  margin: 10px;
 }
 
 div.location img {
@@ -24,6 +27,7 @@ div.location img {
 
 div.speaker {
   display: block;
+  margin: 10px;
 }
 
 div.speaker img {
@@ -39,7 +43,7 @@ div.speaker img {
 
 <div class="location">
   <img src="{{site.url}}/images/rutan.png" class="speaker-image">
-  <a href="https://www.google.com/maps/place/Ruta+N/@6.2648627,-75.566595,15z/data=!4m6!3m5!1s0x8e4428e695083c29:0x99f177323f8c67d5!8m2!3d6.2648627!4d-75.566595!16s%2Fg%2F1tctsqq6?entry=ttu>
+  <a href="https://www.google.com/maps/place/Ruta+N/@6.2648627,-75.566595,15z/data=!4m6!3m5!1s0x8e4428e695083c29:0x99f177323f8c67d5!8m2!3d6.2648627!4d-75.566595!16s%2Fg%2F1tctsqq6?entry=ttu">
     Complejo Ruta N Calle 67 Nº 52-20 Medellín - Colombia
   </a>
 </div>
