--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@ layout: default
 
 h1 {
   text-align: center;
-  margin: 10px;
+  margin: 30px;
 }
 
 h2 {
   text-align: center;
-  margin: 10px;
+  margin: 20px;
+}
+
+a {
+  text-align: center;
+  margin: 20px;
 }
 
 div.location {
   display: block;
-  margin: 10px;
+  margin: 20px;
 }
 
 div.location img {
@@ -27,7 +32,7 @@ div.location img {
 
 div.speaker {
   display: block;
-  margin: 10px;
+  margin: 20px;
 }
 
 div.speaker img {
