--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ h2 {
 
 p {
   text-align: center;
-  text-align: center;
   margin: 20px;
 }
   
@@ -53,17 +52,17 @@ div.speaker img {
 <div class="location">
   <img src="{{site.url}}/images/rutan.png" class="speaker-image">
   <p>
-     <a href="https://www.google.com/maps/place/Ruta+N/@6.2648627,-75.566595,15z/data=!4m6!3m5!1s0x8e4428e695083c29:0x99f177323f8c67d5!8m2!3d6.2648627!4d-75.566595!16s%2Fg%2F1tctsqq6?entry=ttu">
+    <a href="https://www.google.com/maps/place/Ruta+N/@6.2648627,-75.566595,15z/data=!4m6!3m5!1s0x8e4428e695083c29:0x99f177323f8c67d5!8m2!3d6.2648627!4d-75.566595!16s%2Fg%2F1tctsqq6?entry=ttu">
       Complejo Ruta N Calle 67 Nº 52-20 Medellín - Colombia
     </a>  
-  </p>
-  
+  </p>  
 </div>
 
 <h2>Speakers</h2>
 
 <div class="speaker">
   <img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" class="speaker-image" width="200" height="200">
+  <p>Milena Suarez</p>
 </div>
 
 </div><div class="speaker">
