--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ div.speaker img {
 
 <div class="speaker">
   <img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" class="speaker-image" width="200" height="200">
-  <p>Milena Suarez</p>
 </div>
 
 </div><div class="speaker">
   <img src="{{site.url}}/images/11882d67779a93c29216c1c6b465ed2e.png" class="speaker-image" width="200" height="200">
+  <p>Milena Gomez</p>
 </div>
 
 <div class="speaker">
@@ -87,10 +87,12 @@ div.speaker img {
 
 <div class="speaker">
   <img src="{{site.url}}/images/6ad7f3a34309beba7318a4b9a53e6fe9.png" class="speaker-image" width="200" height="200">
+  <p>Catherine Calderon</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/83fa18cdcd216e7220794a23e76fe0dc.png" class="speaker-image" width="200" height="200">
+  <p>Juliana Suarez</p>  
 </div>
 
 <div class="speaker">
