--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ div.speaker img {
 
 <div class="speaker">
   <img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" class="speaker-image" width="200" height="200">
+  <p>Santiago Aragno</p>
 </div>
 
 </div><div class="speaker">
@@ -71,18 +72,22 @@ div.speaker img {
 
 <div class="speaker">
   <img src="{{site.url}}/images/118d8b62f468836d572ebafb98f1a65e.png" class="speaker-image" width="200" height="200">
+  <p>Lucas Zapata</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/11967f63dd951f7ea682ab1239131c7d.png" class="speaker-image" width="200" height="200">
+  <p>Alejandro Posada</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/11b418bf0a8d76da9fa5d3ca72c4eba3.png" class="speaker-image" width="200" height="200">
+  <p>Estiven Vega</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/1ece1693437e7b9a77823a98e95b81cc.png" class="speaker-image" width="200" height="200">
+  <p>Adrián Estrada</p>
 </div>
 
 <div class="speaker">
@@ -97,4 +102,5 @@ div.speaker img {
 
 <div class="speaker">
 <img src="{{site.url}}/images/a95192c2c84e5b344eab1038815c4fc5.png" class="speaker-image" width="200" height="200">
+  <p>Julián Bolonio</p>
 </div>
