--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@ h2 {
   margin: 20px;
 }
 
+h3 {
+  text-align: center;
+  margin: 10px;
+}
+
 p {
   text-align: center;
   margin: 20px;
@@ -46,6 +51,8 @@ div.speaker img {
 </style>
   
 <h1>Bacano Web</h1>
+<h3>November 10-11, 2023</h3>
+<h3>Ruta N, Medellín - Colombia</h3>
 
 <h2>Location</h2>
 
