--- a/index.html
+++ b/index.html
@@ -65,49 +65,73 @@ div.speaker img {
   </p>  
 </div>
 
-<h2>Speakers</h2>
+<h2>Schedule</h2>
+<h3>Nov 11</h3>
 
 <div class="speaker">
   <img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" class="speaker-image" width="200" height="200">
   <p>Santiago Aragno</p>
+  <p>9:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
 
 </div><div class="speaker">
   <img src="{{site.url}}/images/11882d67779a93c29216c1c6b465ed2e.png" class="speaker-image" width="200" height="200">
   <p>Milena Gomez</p>
+  <p>10:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/118d8b62f468836d572ebafb98f1a65e.png" class="speaker-image" width="200" height="200">
   <p>Lucas Zapata</p>
+  <p>11:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
+
+<h3>Lunch</h3>
 
 <div class="speaker">
   <img src="{{site.url}}/images/11967f63dd951f7ea682ab1239131c7d.png" class="speaker-image" width="200" height="200">
   <p>Alejandro Posada</p>
-</div>
-
-<div class="speaker">
-  <img src="{{site.url}}/images/11b418bf0a8d76da9fa5d3ca72c4eba3.png" class="speaker-image" width="200" height="200">
-  <p>Estiven Vega</p>
-</div>
-
-<div class="speaker">
-  <img src="{{site.url}}/images/1ece1693437e7b9a77823a98e95b81cc.png" class="speaker-image" width="200" height="200">
-  <p>Adrián Estrada</p>
-</div>
-
-<div class="speaker">
-  <img src="{{site.url}}/images/6ad7f3a34309beba7318a4b9a53e6fe9.png" class="speaker-image" width="200" height="200">
-  <p>Catherine Calderon</p>
-</div>
-
-<div class="speaker">
-  <img src="{{site.url}}/images/83fa18cdcd216e7220794a23e76fe0dc.png" class="speaker-image" width="200" height="200">
-  <p>Juliana Suarez</p>  
+  <p>1:00 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
 
 <div class="speaker">
 <img src="{{site.url}}/images/a95192c2c84e5b344eab1038815c4fc5.png" class="speaker-image" width="200" height="200">
   <p>Julián Bolonio</p>
+  <p>2:00 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
+
+<div class="speaker">
+  <img src="{{site.url}}/images/11b418bf0a8d76da9fa5d3ca72c4eba3.png" class="speaker-image" width="200" height="200">
+  <p>Estiven Vega</p>
+  <p>3:00 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+</div>
+
+<h2>Schedule</h2>
+<h3>Nov 12</h3>
+
+<div class="speaker">
+  <img src="{{site.url}}/images/1ece1693437e7b9a77823a98e95b81cc.png" class="speaker-image" width="200" height="200">
+  <p>Adrián Estrada</p>
+  <p>9:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+</div>
+
+<div class="speaker">
+  <img src="{{site.url}}/images/6ad7f3a34309beba7318a4b9a53e6fe9.png" class="speaker-image" width="200" height="200">
+  <p>Catherine Calderon</p>
+  <p>10:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+</div>
+
+<div class="speaker">
+  <img src="{{site.url}}/images/83fa18cdcd216e7220794a23e76fe0dc.png" class="speaker-image" width="200" height="200">
+  <p>Juliana Suarez</p>  
+  <p>11:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+</div>
+
+<h3>Lunch</h3>
+
+<div class="speaker">
+<img src="{{site.url}}/images/a95192c2c84e5b344eab1038815c4fc5.png" class="speaker-image" width="200" height="200">
+  <p>Julián Bolonio</p>
+  <p>1:00 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+</div>
+
