--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ div.speaker img {
 </div><div class="speaker">
   <img src="{{site.url}}/images/11882d67779a93c29216c1c6b465ed2e.png" class="speaker-image" width="200" height="200">
   <p>Milena Gomez</p>
-  <p>10:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+  <p>10:00 AM - JavaScript can be as fast as C++</p>
 </div>
 
 <div class="speaker">
@@ -86,24 +86,26 @@ div.speaker img {
   <p>11:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
 
-<h3>Lunch</h3>
+<hr>
+<h2>12:00 - 1:30 Lunch</h2>
+<hr>
 
 <div class="speaker">
   <img src="{{site.url}}/images/11967f63dd951f7ea682ab1239131c7d.png" class="speaker-image" width="200" height="200">
   <p>Alejandro Posada</p>
-  <p>1:00 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+  <p>1:30 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
 
 <div class="speaker">
 <img src="{{site.url}}/images/a95192c2c84e5b344eab1038815c4fc5.png" class="speaker-image" width="200" height="200">
   <p>Julián Bolonio</p>
-  <p>2:00 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+  <p>2:30 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/11b418bf0a8d76da9fa5d3ca72c4eba3.png" class="speaker-image" width="200" height="200">
   <p>Estiven Vega</p>
-  <p>3:00 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+  <p>3:30 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
 
 <h2>Schedule</h2>
@@ -127,11 +129,25 @@ div.speaker img {
   <p>11:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
 
-<h3>Lunch</h3>
+<hr>
+<h2>12:00 - 1:30 Lunch</h2>
+<hr>
 
 <div class="speaker">
 <img src="{{site.url}}/images/a95192c2c84e5b344eab1038815c4fc5.png" class="speaker-image" width="200" height="200">
   <p>Julián Bolonio</p>
-  <p>1:00 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+  <p>1:30 PM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+</div>
+
+</div><div class="speaker">
+  <img src="{{site.url}}/images/11882d67779a93c29216c1c6b465ed2e.png" class="speaker-image" width="200" height="200">
+  <p>Milena Gomez</p>
+  <p>2:30 AM - JavaScript can be as fast as C++</p>
+</div>
+
+<div class="speaker">
+  <img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" class="speaker-image" width="200" height="200">
+  <p>Santiago Aragno</p>
+  <p>3:30 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
 </div>
 
