--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@ div.speaker img {
   <p>3:30 PM - Explorando la creatividad con javascript : Introducción al Creative Coding</p>
 </div>
 
-<h2>Schedule</h2>
+<hr>
+
 <h3>Nov 12</h3>
 
 <div class="speaker">
@@ -150,4 +151,8 @@ div.speaker img {
   <p>Santiago Aragno</p>
   <p>3:30 AM - Overcoming the complexities of Bash scripts by harnessing the Power of JavaScript</p>
 </div>
+
+<hr>
+<h2>6:00 PM After Party - <a href="https://www.google.com/maps/place/Essotico+Rooftop/@6.2100203,-75.5678825,20z/data=!4m15!1m8!3m7!1s0x8e4428dfb80fad05:0x42137cfcc7b53b56!2sMedell%C3%ADn,+Medellin,+Antioquia,+Colombia!3b1!8m2!3d6.2476376!4d-75.5658153!16zL20vMDF4XzZz!3m5!1s0x8e4429f4d5a0716d:0x89b953c84c971315!8m2!3d6.210004!4d-75.5678394!16s%2Fg%2F11pdw28lyc?entry=ttu">Essotico Rooftop</a></h2>
+<hr>
 
