--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ div.speaker img {
 </div><div class="speaker">
   <img src="{{site.url}}/images/11882d67779a93c29216c1c6b465ed2e.png" class="speaker-image" width="200" height="200">
   <p>Milena Gomez</p>
-  <p>10:00 AM - JavaScript can be as fast as C++</p>
+  <p>10:00 AM - Supercharge Your React Apps with GPT in 15 Minutes</p>
 </div>
 
 <div class="speaker">
