--- a/index.html
+++ b/index.html
@@ -153,6 +153,20 @@ div.speaker img {
 </div>
 
 <hr>
-<h2>6:00 PM After Party - <a href="https://www.google.com/maps/place/Essotico+Rooftop/@6.2100203,-75.5678825,20z/data=!4m15!1m8!3m7!1s0x8e4428dfb80fad05:0x42137cfcc7b53b56!2sMedell%C3%ADn,+Medellin,+Antioquia,+Colombia!3b1!8m2!3d6.2476376!4d-75.5658153!16zL20vMDF4XzZz!3m5!1s0x8e4429f4d5a0716d:0x89b953c84c971315!8m2!3d6.210004!4d-75.5678394!16s%2Fg%2F11pdw28lyc?entry=ttu">Essotico Rooftop</a></h2>
-<hr>
+<h2>6:00 PM After Party</h2> 
+<p>
+  <a href="https://www.google.com/maps/place/Essotico+Rooftop/@6.2100203,-75.5678825,20z/data=!4m15!1m8!3m7!1s0x8e4428dfb80fad05:0x42137cfcc7b53b56!2sMedell%C3%ADn,+Medellin,+Antioquia,+Colombia!3b1!8m2!3d6.2476376!4d-75.5658153!16zL20vMDF4XzZz!3m5!1s0x8e4429f4d5a0716d:0x89b953c84c971315!8m2!3d6.210004!4d-75.5678394!16s%2Fg%2F11pdw28lyc?entry=ttu">Essotico Rooftop</a>  
+</p>
 
+<h2>
+Gracias a todas!
+</h2>
+
+<p>
+Bacano Web Colombia is not just a conference; it's a celebration.
+Thank you so much to all who have been part of this dream. Your support, dedication, and effort helped us achieve our goals.
+</p>
+
+<p>
+Bacano Web Crew
+</p>
