--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@ p {
 a {
 }
 
+div.tickets {
+  display: block;
+  margin: 20px;
+}
+
 div.location {
   display: block;
   margin: 20px;
@@ -53,6 +58,14 @@ div.speaker img {
 <h1>Bacano Web</h1>
 <h3>November 10-11, 2023</h3>
 <h3>Ruta N, Medellín - Colombia</h3>
+
+<h2>Tickets</h2>
+
+<div class="tickets">
+  <p>
+    We are SOLD OUT!
+  </p>
+</div>
 
 <h2>Location</h2>
 
