--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@ div.speaker img {
 <div class="speaker">
   <img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" class="speaker-image" width="200" height="200">
   <p>Santiago Aragno</p>
-  <p>9:00 AM - Chatting with the Canvas; How to assemble art from AI Image Prompts</p>
+  <p>9:00 AM - Chatting with the Canvas; Assemble Art with AI</p>
 </div>
 
 </div><div class="speaker">
   <img src="{{site.url}}/images/11882d67779a93c29216c1c6b465ed2e.png" class="speaker-image" width="200" height="200">
   <p>Milena Gomez</p>
-  <p>10:00 AM - Supercharge Your React Apps with GPT in 15 Minutes</p>
+  <p>10:00 AM - React Apps with GPT</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/118d8b62f468836d572ebafb98f1a65e.png" class="speaker-image" width="200" height="200">
   <p>Lucas Zapata</p>
-  <p>11:00 AM - Machine learning con Javascript utilizando Tensorflow.js</p>
+  <p>11:00 AM - Machine Learning con Javascript utilizando TF.js</p>
 </div>
 
 <hr>
@@ -106,19 +106,19 @@ div.speaker img {
 <div class="speaker">
   <img src="{{site.url}}/images/11967f63dd951f7ea682ab1239131c7d.png" class="speaker-image" width="200" height="200">
   <p>Alejandro Posada</p>
-  <p>1:30 PM - FROM DRAIN TO GAIN! Aprovechamiento de agua para baños sostenibles</p>
+  <p>1:30 PM - JavaScript para construir paz</p>
 </div>
 
 <div class="speaker">
 <img src="{{site.url}}/images/a95192c2c84e5b344eab1038815c4fc5.png" class="speaker-image" width="200" height="200">
   <p>Julián Bolonio</p>
-  <p>2:30 PM - Playwright, Selenium or Cypress, what is the best option for JavaScript developers</p>
+  <p>2:30 PM - Playwright or Cypress, what is best for JavaScript developers?</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/11b418bf0a8d76da9fa5d3ca72c4eba3.png" class="speaker-image" width="200" height="200">
   <p>Estiven Vega</p>
-  <p>3:30 PM - Explorando la creatividad con javascript : Introducción al Creative Coding</p>
+  <p>3:30 PM - Explorando la creatividad con javascript</p>
 </div>
 
 <hr>
@@ -128,19 +128,19 @@ div.speaker img {
 <div class="speaker">
   <img src="{{site.url}}/images/1ece1693437e7b9a77823a98e95b81cc.png" class="speaker-image" width="200" height="200">
   <p>Adrián Estrada</p>
-  <p>9:00 AM - Promoviendo Comunidades Sostenibles con JavaScript de la mano de US Green Building Council</p>
+  <p>9:00 AM - Promoviendo Comunidades Sostenibles con JavaScript</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/6ad7f3a34309beba7318a4b9a53e6fe9.png" class="speaker-image" width="200" height="200">
   <p>Catherine Calderon</p>
-  <p>10:00 AM - Machine learning con Javascript utilizando Tensorflow.js</p>
+  <p>10:00 AM - Emerging Trends in the JavaScript UI/UX</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/83fa18cdcd216e7220794a23e76fe0dc.png" class="speaker-image" width="200" height="200">
   <p>Juliana Suarez</p>  
-  <p>11:00 AM - Optimization and performance analysis of Javascript applications</p>
+  <p>11:00 AM - Performance analysis of Javascript applications</p>
 </div>
 
 <hr>
@@ -162,7 +162,7 @@ div.speaker img {
 <div class="speaker">
   <img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" class="speaker-image" width="200" height="200">
   <p>Santiago Aragno</p>
-  <p>3:30 AM - Overcoming the complexities of Bash scripts by harnessing the Power of JavaScript</p>
+  <p>3:30 AM - Harness the Power of JavaScript to replace bash scripts!</p>
 </div>
 
 <hr>
