--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@ layout: default
 
 h1 {
   text-align: center;
-  margin: 30px;
+  margin: 40px;
 }
 
 h2 {
   text-align: center;
-  margin: 20px;
+  margin: 35px;
 }
 
 h3 {
   text-align: center;
-  margin: 10px;
+  margin: 30px;
 }
 
 p {
   text-align: center;
-  margin: 20px;
+  margin: 22px;
 }
   
 a {
@@ -41,6 +41,7 @@ div.location img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding: 20px 0px 40px 0px;
 }
 
 div.speaker {
