--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 h1 {
   text-align: center;
-  margin: 40px;
+  margin: 50px;
 }
 
 h2 {
@@ -64,7 +64,7 @@ div.speaker img {
 
 <div class="tickets">
   <p>
-    We are SOLD OUT!
+    SOLD OUT!
   </p>
 </div>
 
@@ -177,10 +177,10 @@ Gracias a todas!
 </h2>
 
 <p>
-Bacano Web Colombia is not just a conference; it's a celebration.
-Thank you so much to all who have been part of this dream. Your support, dedication, and effort helped us achieve our goals.
+Bacano Web Colombia is a celebration!
+Thank you to all who have been part of our event.
 </p>
 
 <p>
-Bacano Web Crew
+Bacano Web Team
 </p>
