--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ div.speaker img {
   margin-right: auto;
 }
 </style>
-  
+
+<h1>Conference (this is a prototype site for testing purposes)</h1>
 <h3>November 10-11, 2023</h3>
 
 <h2>Tickets</h2>
@@ -70,11 +71,6 @@ div.speaker img {
 
 <div class="location">
   <img src="{{site.url}}/images/rutan.png" class="speaker-image">
-  <p>
-    <a href="https://www.google.com/maps/place/Ruta+N/@6.2648627,-75.566595,15z/data=!4m6!3m5!1s0x8e4428e695083c29:0x99f177323f8c67d5!8m2!3d6.2648627!4d-75.566595!16s%2Fg%2F1tctsqq6?entry=ttu">
-      Complejo Ruta N Calle 67 Nº 52-20 Medellín - Colombia
-    </a>  
-  </p>  
 </div>
 
 <h2>Schedule</h2>
