--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@ div.speaker img {
 
 <div class="speaker">
   <img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" class="speaker-image" width="200" height="200">
-  <p>Santiago Aragno</p>
+  <p>Speaker</p>
   <p>9:00 AM - Chatting with the Canvas; Assemble Art with AI</p>
 </div>
 
 </div><div class="speaker">
   <img src="{{site.url}}/images/11882d67779a93c29216c1c6b465ed2e.png" class="speaker-image" width="200" height="200">
-  <p>Milena Gomez</p>
+  <p>Speaker</p>
   <p>10:00 AM - React Apps with GPT</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/118d8b62f468836d572ebafb98f1a65e.png" class="speaker-image" width="200" height="200">
-  <p>Lucas Zapata</p>
+  <p>Speaker</p>
   <p>11:00 AM - Machine Learning con Javascript utilizando TF.js</p>
 </div>
 
@@ -100,19 +100,19 @@ div.speaker img {
 
 <div class="speaker">
   <img src="{{site.url}}/images/11967f63dd951f7ea682ab1239131c7d.png" class="speaker-image" width="200" height="200">
-  <p>Alejandro Posada</p>
+  <p>Speaker</p>
   <p>1:30 PM - JavaScript para construir paz</p>
 </div>
 
 <div class="speaker">
 <img src="{{site.url}}/images/a95192c2c84e5b344eab1038815c4fc5.png" class="speaker-image" width="200" height="200">
-  <p>Julián Bolonio</p>
+  <p>Speaker</p>
   <p>2:30 PM - Playwright or Cypress, what is best for JavaScript developers?</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/11b418bf0a8d76da9fa5d3ca72c4eba3.png" class="speaker-image" width="200" height="200">
-  <p>Estiven Vega</p>
+  <p>Speaker</p>
   <p>3:30 PM - Explorando la creatividad con javascript</p>
 </div>
 
@@ -122,19 +122,19 @@ div.speaker img {
 
 <div class="speaker">
   <img src="{{site.url}}/images/1ece1693437e7b9a77823a98e95b81cc.png" class="speaker-image" width="200" height="200">
-  <p>Adrián Estrada</p>
+  <p>Speaker</p>
   <p>9:00 AM - Promoviendo Comunidades Sostenibles con JavaScript</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/6ad7f3a34309beba7318a4b9a53e6fe9.png" class="speaker-image" width="200" height="200">
-  <p>Catherine Calderon</p>
+  <p>Speaker</p>
   <p>10:00 AM - Emerging Trends in the JavaScript UI/UX</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/83fa18cdcd216e7220794a23e76fe0dc.png" class="speaker-image" width="200" height="200">
-  <p>Juliana Suarez</p>  
+  <p>Speaker</p>  
   <p>11:00 AM - Performance analysis of Javascript applications</p>
 </div>
 
@@ -144,19 +144,19 @@ div.speaker img {
 
 <div class="speaker">
 <img src="{{site.url}}/images/a95192c2c84e5b344eab1038815c4fc5.png" class="speaker-image" width="200" height="200">
-  <p>Julián Bolonio</p>
+  <p>Speaker</p>
   <p>1:30 PM - Unlock the Power of JavaScript Generators</p>
 </div>
 
 </div><div class="speaker">
   <img src="{{site.url}}/images/11882d67779a93c29216c1c6b465ed2e.png" class="speaker-image" width="200" height="200">
-  <p>Milena Gomez</p>
+  <p>Speaker</p>
   <p>2:30 AM - JavaScript can be as fast as C++</p>
 </div>
 
 <div class="speaker">
   <img src="{{site.url}}/images/113f63c7b7be0723c61a646c13efe430.png" class="speaker-image" width="200" height="200">
-  <p>Santiago Aragno</p>
+  <p>Speaker</p>
   <p>3:30 AM - Harness the Power of JavaScript to replace bash scripts!</p>
 </div>
 
@@ -171,10 +171,9 @@ Gracias a todas!
 </h2>
 
 <p>
-Bacano Web Colombia is a celebration!
 Thank you to all who have been part of our event.
 </p>
 
 <p>
-Bacano Web Team
+Web Team
 </p>
